# nlp

./: pyproject.toml
datasets/lab1-feature_extraction/: freaquency.csv
src/lab1-feature_extraction/: cbow_model_colab.ipynb  context_embeddings.ipynb  description.md
src/lab2-rnn_many2one/: description.md  preprocess.ipynb  rnn_lstm_gru.ipynb
src/pz1-torch_classification/: description.md  torch_classification_colab.ipynb
src/pz2-hh_parsing/: description.md  parsing.ipynb
