[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "Project for nlp learning and doing labs"
authors = ["Portlex <portnyagin924@gmail.com>"]
readme = "README.md"
package-mode = false
licence = GPL-3.0-or-later

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
