[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "Project for nlp learning and doing labs"
authors = ["Portlex <portnyagin924@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipywidgets = "^8.1.5"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
