[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "Project for nlp learning and doing labs"
authors = ["Portlex <portnyagin924@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipywidgets = "^8.1.5"
torch = "^2.4.1"
requests = "^2.32.3"
razdel = "^0.5.0"
numpy = ">=2.0.0,<2.1.0"
spacy = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
